// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HarnessApprovalTab /> tests Non-Waiting Status form is not shown 1`] = `
<div>
  <table
    class="detailsTable"
  >
    <tbody>
      <tr>
        <th>
          startedAt
        </th>
        <td>
          -
        </td>
      </tr>
      <tr>
        <th>
          endedAt
        </th>
        <td>
          -
        </td>
      </tr>
      <tr>
        <th>
          pipeline.duration
        </th>
        <td>
          <div>
            MOCK DURATION
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="harnessApproval completed"
  >
    <div
      class="approversHeading"
    >
      pipeline.approvalStep.approversWithColon
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 1
            </div>
            <div
              class="status"
              data-status="APPROVE"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.APPROVE
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 2
            </div>
            <div
              class="status"
              data-status="REJECT"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.REJECT
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HarnessApprovalTab /> tests Waiting Status does not shows form if user is authorized 1`] = `
<div>
  <div
    class="info"
    data-type="harness"
  >
    <div
      class="infoHeader"
    >
      <div
        class="statusMsg"
      >
        execution.approvals.statusMsg
      </div>
      <div
        class="timer"
      >
        <div>
          MOCK DURATION
        </div>
        <span>
          execution.approvals.timeRemainingSuffix
        </span>
      </div>
    </div>
    <div
      class="reviewMsg"
    >
      Please review the following information and approve the pipeline progression
    </div>
  </div>
  <div
    class="harnessApproval"
  >
    <div
      class="approversHeading"
    >
      pipeline.approvalStep.approversWithColon
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 1
            </div>
            <div
              class="status"
              data-status="APPROVE"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.APPROVE
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 2
            </div>
            <div
              class="status"
              data-status="REJECT"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.REJECT
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-large StyledProps--padding-right-large"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange700 StyledProps--font-align-center"
      >
        pipeline.approvalStep.disallowedApproverExecution
      </p>
    </div>
  </div>
</div>
`;

exports[`<HarnessApprovalTab /> tests Waiting Status shows form if user is authorized 1`] = `
<div>
  <div
    class="info"
    data-type="harness"
  >
    <div
      class="infoHeader"
    >
      <div
        class="statusMsg"
      >
        execution.approvals.statusMsg
      </div>
      <div
        class="timer"
      >
        <div>
          MOCK DURATION
        </div>
        <span>
          execution.approvals.timeRemainingSuffix
        </span>
      </div>
    </div>
    <div
      class="reviewMsg"
    >
      Please review the following information and approve the pipeline progression
    </div>
  </div>
  <div
    class="harnessApproval"
  >
    <div
      class="approversHeading"
    >
      pipeline.approvalStep.approversWithColon
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 1
            </div>
            <div
              class="status"
              data-status="APPROVE"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.APPROVE
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="collapse"
      >
        <div
          class="title"
        >
          <div
            class="summary"
          >
            <div
              class="approverName"
            >
              User 2
            </div>
            <div
              class="status"
              data-status="REJECT"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span>
                pipeline.approvalStep.status.REJECT
              </span>
            </div>
            <div
              class="time"
            >
              SOME_TIME_AGO
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal bp3-small toggle"
            data-testid="toggle-collapse"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-down"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp3-collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
    <div
      class="inputs"
    >
      <div
        class="heading"
      >
        execution.approvals.inputsTitle
      </div>
      <div
        class="formRow labels"
      >
        <span>
          variableNameLabel
        </span>
        <span>
          configureOptions.defaultValue
        </span>
      </div>
      <div
        class="formRow"
      >
        <div
          class="TextInput--main"
        >
          <div
            class="bp3-input-group bp3-disabled"
          >
            <input
              class="bp3-input"
              disabled=""
              name="approverInputs[0].name"
              type="text"
              value="var1"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="approverInputs[0].value"
                type="text"
                value="val10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="formRow"
      >
        <div
          class="TextInput--main"
        >
          <div
            class="bp3-input-group bp3-disabled"
          >
            <input
              class="bp3-input"
              disabled=""
              name="approverInputs[1].name"
              type="text"
              value="var2"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="approverInputs[1].value"
                type="text"
                value="val20"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group heading"
      >
        <label
          class="bp3-label"
          for="comments"
        >
          Comments
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <textarea
            autocomplete="off"
            class="bp3-input bp3-fill"
            name="comments"
          />
        </div>
      </div>
      <div
        class="actions"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-tick StyledProps--main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            <span>
              common.approve
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            <span>
              common.reject
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
